small typo fixes

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,7 +1,6 @@
 # Collaboration with version control {#version_control}
 
 ```{r 04-setup_version_control, echo = FALSE, message = FALSE, warning = FALSE}
-library(knitr)
 library(magrittr)
 library(magick)
 knitr::opts_chunk$set(echo = FALSE)
@@ -87,13 +86,12 @@ hand corner, and then on "New Repository" as shown below:
 image_read("img/version_control/new_repository_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1148") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 On the next page, do the following: 
 
-1. Enter the name for your project repository. In the example below, we use `languages_in_canada`. Most repositories follow this naming convention, which involves lowercase letter words separated by either underscores or hyphens.
+1. Enter the name for your project repository. In the example below, we use `canadian_languages`. Most repositories follow this naming convention, which involves lowercase letter words separated by either underscores or hyphens.
 2. Choose an option for the privacy of your repository
     1. If you select "Public", your repository may be *viewed* by anyone, but only you and collaborators you designate will be able to *modify* it.
     2. If you select "Private", only you and your collaborators can *view* or *modify* it.
@@ -105,8 +103,7 @@ On the next page, do the following:
 image_read("img/version_control/new_repository_02.png") %>% 
   image_flop() %>% 
   image_crop("1700x2296+1000-150") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 Now you should have a repository that looks something like this:
@@ -135,8 +132,7 @@ The pen tool can be used to edit existing plaintext files. Click on the pen tool
 image_read("img/version_control/pen-tool_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1500") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 Use the text box to make your changes:
@@ -145,8 +141,7 @@ Use the text box to make your changes:
 image_read("img/version_control/pen-tool_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x1300") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 Finally, *commit* your changes. When you *commit a file* in a repository, the version control system takes a snapshot
@@ -156,8 +151,7 @@ Do this now:
 
 ```{r pen_tool_03}
 image_read("img/version_control/pen-tool_03.png") %>% 
-  image_crop("3632x1500+1+500") #%>% 
-  #image_shadow()
+  image_crop("3632x1500+1+500")
 ```
 
 
@@ -171,8 +165,7 @@ select the "Create new file" option:
 image_read("img/version_control/create-new-file_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1600") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 A page will open with a small text box for the file name to be entered, and a larger text box where the desired file 
@@ -186,8 +179,7 @@ Jupyter notebooks, so the "Preview" tab is especially helpful for checking markd
 image_read("img/version_control/create-new-file_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x1300") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 Save and commit your changes by click the green "Commit changes" button at the 
@@ -195,8 +187,7 @@ bottom of the page.
 
 ```{r create_new_file_03}
 image_read("img/version_control/create-new-file_03.png") %>% 
-  image_crop("3632x1500+1+500") #%>% 
-  #image_shadow()
+  image_crop("3632x1500+1+500")
 ```
 
 You can also upload files that you have created on your local machine by using 
@@ -206,8 +197,7 @@ the "Add file" drop down menu and selecting "Upload files":
 image_read("img/version_control/upload-files_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1600") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 To select the files from your local computer to upload, you can either drag and 
@@ -220,8 +210,7 @@ page.
 image_read("img/version_control/upload-files_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x2300") %>% 
-  image_flop() #%>% 
-  #image_shadow()
+  image_flop()
 ```
 
 Note that Git and GitHub are designed to track changes in individual files. *Do not*
@@ -292,7 +281,7 @@ cannot see your work yet.
 5. When you want to store your commits (that only exist in your cloned repository right now) on the cloud where they can be shared with your collaborators, you *push* them
 back to the hosted repository on GitHub.
 
-Below we walk through how to use the JupyterHub Git extension tool to do 
+Below we walk through how to use the Jupyter Git extension tool to do 
 each of the steps outlined above.
 
 ### Specifying files to commit
@@ -300,14 +289,14 @@ each of the steps outlined above.
 Below we created and saved a new file (named `eda.ipynb`) that we would 
 like to send back to the project repository on GitHub.
 To "add" this modified file to the staging area (*i.e.*, flag that this is a
-file whose changes we would like to commit), we click the JupyterLab git extension 
+file whose changes we would like to commit), we click the Jupyter Git extension 
 icon on the far left-hand side of JupyterLab:
 
 ```{r git_add_01}
 image_read("img/version_control/git_add_01.png")
 ```
 
-This opens the JupyterLab Git graphical user interface pane, and then we
+This opens the Jupyter Git graphical user interface pane, and then we
 click the plus sign beside the file that we want to "add". 
 
 > **Note:** because this is the first change for this file that we want to add, it falls under the 
@@ -452,7 +441,7 @@ that Git will make sure nobody else has pushed any work in the meantime.
 image_read("img/version_control/git_pull_00.png") %>% 
   image_crop("3632x1900")
 ```
-You can do this using the JupyterHub Git tab by clicking on the cloud icon with 
+You can do this using the Jupyter Git tab by clicking on the cloud icon with 
 the down arrow:
 
 ```{r git_pull_01}
