--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,6 +1,6 @@
 # Collaboration with version control {#version_control}
 
-```{r 04-setup_version_control, echo = FALSE, message = FALSE, warning = FALSE}
+```{r 04-setup-version-control, echo = FALSE, message = FALSE, warning = FALSE}
 library(magrittr)
 library(magick)
 knitr::opts_chunk$set(echo = FALSE)
@@ -81,7 +81,7 @@ Once you have logged into your account, you can create a new repository to host 
 by clicking on the "+" icon in the upper right 
 hand corner, and then on "New Repository" as shown below:
 
-```{r new_repository_01}
+```{r new-repository-01}
 #include_graphics("img/version_control/new_repository_01.png")
 image_read("img/version_control/new_repository_01.png") %>% 
   image_flop() %>% 
@@ -98,20 +98,19 @@ On the next page, do the following:
 3. Select "Add a README file." This creates a template `README.md` file in your repository's root folder.
 4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
-```{r new_repository_02_old}
-#include_graphics("img/version_control/new_repository_02.png")
+```{r new-repository-02}
 image_read("img/version_control/new_repository_02.png") %>% 
   image_flop() %>% 
-  image_crop("1700x2296+1000-150") %>% 
+  image_crop("1700x2240+1000-150") %>% 
   image_flop()
 ```
 
 Now you should have a repository that looks something like this:
 
-```{r new_repository_03}
+```{r new-repository-03}
 image_read("img/version_control/new_repository_03.png") %>% 
   image_flop() %>% 
-  image_crop("3632x1700") %>% 
+  image_crop("3584x1700") %>% 
   image_flop() 
 ```
 
@@ -128,20 +127,20 @@ plaintext files, for example, the `README.md` file that is already present in th
 
 The pen tool can be used to edit existing plaintext files. Click on the pen tool:
 
-```{r pen_tool_01}
+```{r pen-tool-01}
 image_read("img/version_control/pen-tool_01.png") %>% 
   image_flop() %>% 
-  image_crop("3632x1500") %>% 
+  image_crop("3584x1500") %>% 
   image_flop()
 ```
 
 Use the text box to make your changes:
 
-```{r pen_tool_02}
+```{r pen-tool-02}
 image_read("img/version_control/pen-tool_02.png") %>% 
-  image_flop() %>% 
-  image_crop("3632x1300") %>% 
-  image_flop()
+  #image_flop() %>% 
+  image_crop("3584x1300")# %>% 
+  #image_flop()
 ```
 
 Finally, *commit* your changes. When you *commit a file* in a repository, the version control system takes a snapshot
@@ -149,9 +148,9 @@ of what the file looks like. As you continue working on the project, over time y
 a useful version history for that file. On GitHub, if you click the green "Commit changes" button, it will save the file and then make a commit.
 Do this now:
 
-```{r pen_tool_03}
+```{r pen-tool-03}
 image_read("img/version_control/pen-tool_03.png") %>% 
-  image_crop("3632x1500+1+500")
+  image_crop("3583x1500+1+500")
 ```
 
 
@@ -161,10 +160,10 @@ The "Add file" menu can be used to create new plaintext files and upload files f
 To create a new plaintext file, click the "Add file" drop down menu and 
 select the "Create new file" option:
 
-```{r create_new_file_01}
+```{r create-new-file-01}
 image_read("img/version_control/create-new-file_01.png") %>% 
   image_flop() %>% 
-  image_crop("3632x1600") %>% 
+  image_crop("3584x1600") %>% 
   image_flop()
 ```
 
@@ -175,28 +174,28 @@ look like when rendered, respectively. Note that GitHub understands and renders 
 files using a [markdown syntax](https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf) very similar to
 Jupyter notebooks, so the "Preview" tab is especially helpful for checking markdown code correctness.
 
-```{r create_new_file_02}
+```{r create-new-file-02}
 image_read("img/version_control/create-new-file_02.png") %>% 
   image_flop() %>% 
-  image_crop("3632x1300") %>% 
+  image_crop("3584x1300") %>% 
   image_flop()
 ```
 
 Save and commit your changes by click the green "Commit changes" button at the 
 bottom of the page.
 
-```{r create_new_file_03}
+```{r create-new-file-03}
 image_read("img/version_control/create-new-file_03.png") %>% 
-  image_crop("3632x1500+1+500")
+  image_crop("3584x1500+1+500")
 ```
 
 You can also upload files that you have created on your local machine by using 
 the "Add file" drop down menu and selecting "Upload files":
 
-```{r upload_files_01}
+```{r upload-files-01}
 image_read("img/version_control/upload-files_01.png") %>% 
   image_flop() %>% 
-  image_crop("3632x1600") %>% 
+  image_crop("3584x1600") %>% 
   image_flop()
 ```
 
@@ -206,10 +205,10 @@ link to access a file browser dialog. Once the files you want to upload have
 been selected, click the green "Commit changes" button at the bottom of the 
 page.
 
-```{r upload_files_02}
+```{r upload-files-02}
 image_read("img/version_control/upload-files_02.png") %>% 
   image_flop() %>% 
-  image_crop("3632x2300") %>% 
+  image_crop("3584x2200") %>% 
   image_flop()
 ```
 
@@ -233,14 +232,14 @@ We need to *clone* our project's Git repository to our JupyterHub---i.e., make a
 send/receive new committed edits. In order to do this, first copy the url from the HTTPS tab of the Code drop down menu on 
 GitHub:
 
-```{r clone_02}
+```{r clone-02}
 image_read("img/version_control/clone_02.png") %>% 
-  image_crop("3632x1500")
+  image_crop("3584x1500")
 ```
 
 Then open JupyterHub, and click the Git+ icon on the file browser tab:
 
-```{r clone_01}
+```{r clone-01}
 image_read("img/version_control/clone_01.png") %>% 
   image_crop("2400x1430+1")
 ```
@@ -248,7 +247,7 @@ image_read("img/version_control/clone_01.png") %>%
 Paste the url of the GitHub project repository you 
 created and click the blue "CLONE" button:
 
-```{r clone_03}
+```{r clone-03}
 image_read("img/version_control/clone_03.png") %>% 
   image_crop("2400x1430+1")
 ```
@@ -256,7 +255,7 @@ image_read("img/version_control/clone_03.png") %>%
 On the file browser tab, you will now see a folder for your project's repository 
 (and inside it will be all the files that existed on GitHub):
 
-```{r clone_04}
+```{r clone-04}
 image_read("img/version_control/clone_04.png") %>% 
   image_crop("2400x1430+1")
 ```
@@ -292,7 +291,7 @@ To "add" this modified file to the staging area (*i.e.*, flag that this is a
 file whose changes we would like to commit), we click the Jupyter Git extension 
 icon on the far left-hand side of JupyterLab:
 
-```{r git_add_01}
+```{r git-add-01}
 image_read("img/version_control/git_add_01.png")
 ```
 
@@ -307,7 +306,7 @@ changes we made, we will find it under the "Changed" heading.
 automatically created by Jupyter when you work on `eda.ipynb`. You generally do not add auto-generated files to Git repositories,
 only add the files you directly create and edit.
 
-```{r git_add_02}
+```{r git-add-02}
 image_read("img/version_control/git_add_02.png")
 ```
 
@@ -316,7 +315,7 @@ flagging this file so that Git knows we want a snapshot of its current state as 
 Now we are ready to "commit" the changes. Make sure to include a (clear and helpful!) message about what was changed
 so that your collaborators (and future you) know what happened in this commit. 
 
-```{r git_add_03}
+```{r git-add-03}
 image_read("img/version_control/git_add_03.png")
 ```
 
@@ -330,7 +329,7 @@ commit, are the primary means to navigate through the project's histry in the
  event that we need to view or retrieve a past version of a file, or 
 revert our project to an earlier state.
 
-```{r git_commit_01}
+```{r git-commit-01}
 image_read("img/version_control/git_commit_01.png")
 ```
 
@@ -342,7 +341,7 @@ After "commiting" the file(s), you will see there there are 0 "Staged" files and
 are now ready to push our changes (and the attached commit message) to our 
 project repository on GitHub:
 
-```{r git_commit_03}
+```{r git-commit-03}
 image_read("img/version_control/git_commit_03.png")
 ```
 
@@ -352,14 +351,14 @@ To send the committed changes back to the project repository on
 GitHub, we need to *push* them. To do this we click on 
 the cloud icon with the up arrow on the Jupyter Git tab:
 
-```{r git_push_01}
+```{r git-push-01}
 image_read("img/version_control/git_push_01.png")
 ```
 
 We will then be prompted to enter our GitHub username 
 and password, and click the blue "OK" button:
 
-```{r git_push_02}
+```{r git-push-02}
 image_read("img/version_control/git_push_02.png")
 ```
 
@@ -367,15 +366,15 @@ If the files were successfully pushed to our project repository on
 GitHub we will be given the success message shown 
 below. Click "Dismiss" to continue working in Jupyter.
 
-```{r git_push_03}
+```{r git-push-03}
 image_read("img/version_control/git_push_03.png")
 ```
 
 You will see that the changes now exist there!
 
-```{r git_push_04}
+```{r git-push-04}
 image_read("img/version_control/git_push_04.png") %>% 
-  image_crop("3632x2000")
+  image_crop("3584x2000")
 ```
 
 ## Collaboration
@@ -387,38 +386,38 @@ project. The default of both public and private projects are that only the
 person who created the GitHub repository has permissions to create, edit and 
 delete files (*write access*). To give your collaborators write access to the projects, navigate to the "Settings" tab:
 
-```{r add_collab_01}
+```{r add-collab-01}
 image_read("img/version_control/add_collab_01.png") %>% 
-  image_crop("3632x1250")
+  image_crop("3584x1250")
 ```
 
 Then click "Manage access":
 
-```{r add_collab_02}
+```{r add-collab-02}
 image_read("img/version_control/add_collab_02.png") %>% 
-  image_crop("3632x1200")
+  image_crop("3584x1200")
 ```
 
 Click the green "Invite a collaborator" button:
 
-```{r add_collab_03}
+```{r add-collab-03}
 image_read("img/version_control/add_collab_03.png") %>% 
-  image_crop("3632x2200")
+  image_crop("3584x2200")
 ```
 
 Type in the collaborator's GitHub username and select their name when it 
 appears:
 
-```{r add_collab_04}
+```{r add-collab-04}
 image_read("img/version_control/add_collab_04.png") %>% 
-  image_crop("3632x1250")
+  image_crop("3584x1250")
 ```
 
 Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button:
 
-```{r add_collab_05}
+```{r add-collab-05}
 image_read("img/version_control/add_collab_05.png") %>% 
-  image_crop("3632x1250")
+  image_crop("3584x1250")
 ```
 
 After this you should see your newly added collaborator listed under the 
@@ -437,35 +436,35 @@ to what is present on GitHub.
 have pushed changes to the GitHub repository. It is only when you try to *push* your changes back to GitHub
 that Git will make sure nobody else has pushed any work in the meantime. 
 
-```{r git_pull_00}
+```{r git-pull-00}
 image_read("img/version_control/git_pull_00.png") %>% 
-  image_crop("3632x1900")
+  image_crop("3584x1900")
 ```
 You can do this using the Jupyter Git tab by clicking on the cloud icon with 
 the down arrow:
 
-```{r git_pull_01}
+```{r git-pull-01}
 image_read("img/version_control/git_pull_01.png")
 ```
 
 Once the files are successfully pulled from GitHub, you need to click "Dismiss"
 to keep working:
 
-```{r git_pull_02}
+```{r git-pull-02}
 image_read("img/version_control/git_pull_02.png")
 ```
 
 And then when you open (or refresh) the files whose changes you just pulled,
 you should be able to see them:
 
-```{r git_pull_03}
+```{r git-pull-03}
 image_read("img/version_control/git_pull_03.png")
 ```
 
 It can be very useful to review the history of the changes to your project. You
 can do this directly on the JupyterHub by clicking "History" in the Git tab.
 
-```{r git_pull_04}
+```{r git-pull-04}
 image_read("img/version_control/git_pull_04.png")
 ```
 
@@ -474,9 +473,9 @@ you start working on your local copy. If you do not do this, and your collaborat
 to the project to GitHub, then you will be unable to push your changes to 
 GitHub until you pull. This situation can be recognized by this error message:
 
-```{r merge_conflict_01}
+```{r merge-conflict-01}
 image_read("img/version_control/merge_conflict_01.png") %>% 
-  image_crop("3632x1900")
+  image_crop("3584x1900")
 ```
 
 Usually, getting out of this situation is not too troublesome. First you need to 
@@ -491,9 +490,9 @@ collaborators version of the line(s), or some blend of the two. When this
 happens, Git will tell you that you have a merge conflict and that it needs 
 human intervention (you!), and which file(s) this occurs in.
 
-```{r merge_conflict_03}
+```{r merge-conflict-03}
 image_read("img/version_control/merge_conflict_03.png") %>% 
-  image_crop("3632x1900")
+  image_crop("3584x1900")
 ```
 
 ### Handling merge conflicts
@@ -502,9 +501,9 @@ To fix the merge conflict we need to open the file that had the merge
 conflict in a plain text editor and look for special marks that Git puts in the
 file to tell you where the merge conflict occurred. 
 
-```{r merge_conflict_04}
+```{r merge-conflict-04}
 image_read("img/version_control/merge_conflict_04.png") %>% 
-  image_crop("3632x1200")
+  image_crop("3584x1200")
 ```
 
 The beginning of the merge
@@ -513,17 +512,17 @@ marked by `>>>>>>>`. Between these markings, Git also inserts a separator
 (`=======`). The version of the change before the separator is your change, and 
 the version that follows the separator was the change that existed on GitHub.
 
-```{r merge_conflict_05}
+```{r merge-conflict-05}
 image_read("img/version_control/merge_conflict_05.png") %>% 
-  image_crop("3632x1200")
+  image_crop("3584x1200")
 ```
 
 Once you have decided which version of the change (or what combination!) to keep, you need to use the 
 plain text editor to remove the special marks that Git added.  
 
-```{r merge_conflict_06}
+```{r merge-conflict-06}
 image_read("img/version_control/merge_conflict_06.png") %>% 
-  image_crop("3632x1200")
+  image_crop("3584x1200")
 ```
 
 The file must be saved, added to the staging area, and then committed before you will be able to 
@@ -552,41 +551,41 @@ thread. Replying to issues from email is also possible. Given all of these advan
 
 To open a GitHub issue, first click on the "Issues" tab:
 
-```{r issue_01}
+```{r issue-01}
 image_read("img/version_control/issue_01.png") %>% 
-  image_crop("3632x1250")
+  image_crop("3584x1250")
 ```
 
 Next click the "New issue" button:
 
-```{r issue_02}
+```{r issue-02}
 image_read("img/version_control/issue_02.png") %>% 
-  image_crop("3632x1250")
+  image_crop("3584x1250")
 ```
 
 Add an issue title (which acts like an email subject line), and then put the 
 body of the message in the larger text box. Finally click "Submit new issue"
 to post the issue to share with others:
 
-```{r issue_03}
+```{r issue-03}
 image_read("img/version_control/issue_03.png") %>% 
-  image_crop("3632x2500")
+  image_crop("3584x2200")
 ```
 
 You can reply to an issue that someone opened by adding your written response to
 the large text box and clicking comment:
 
-```{r issue_04}
+```{r issue-04}
 image_read("img/version_control/issue_04.png") %>% 
-  image_crop("3632x2000")
+  image_crop("3584x2000")
 ```
 
 When a conversation is resolved, you can click "Close issue". The closed issue 
 can be later viewed be clicking the "Closed" header link in the "Issue" tab:
 
-```{r issue_06}
+```{r issue-06}
 image_read("img/version_control/issue_06.png") %>% 
-  image_crop("3632x1900")
+  image_crop("3584x1900")
 ```
 
 ## Additional readings/resources
